log
Fri 24 Mar 2023 03:24:57 AM UTC: 
 tests:  0|6
total_score: 0/70
966e9bc
Fri 24 Mar 2023 04:17:59 AM UTC: 
 list.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:77:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   77 |   if (lista->current == NULL) {
      |       ^~~~~
      |       list
list.c:77:7: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘popCurrent’:
list.c:101:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
  101 |   void* dato = nodoAEliminar->dato;
      |                               ^~~~
      |                               data
list.c:103:18: error: ‘nodoAE’ undeclared (first use in this function)
  103 |     list->head = nodoAE
      |                  ^~~~~~
list.c:103:24: error: expected ‘;’ before ‘}’ token
  103 |     list->head = nodoAE
      |                        ^
      |                        ;
  104 | }
      | ~                       
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:101:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  101 |   void* dato = nodoAEliminar->dato;
      |         ^~~~
list.c: In function ‘createList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
list.c: In function ‘popCurrent’:
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:107:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  107 | void cleanList(List * list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a08c173
Fri 24 Mar 2023 04:19:39 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
test.c: In function ‘popCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:101:9: error: unused variable ‘data’ [-Werror=unused-variable]
  101 |   void* data = nodoAEliminar->data;
      |         ^~~~
list.c: In function ‘createList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
list.c: In function ‘popCurrent’:
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:107:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  107 | void cleanList(List * list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
348010e
Fri 24 Mar 2023 04:20:46 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:101:9: error: unused variable ‘data’ [-Werror=unused-variable]
  101 |   void* data = nodoAEliminar->data;
      |         ^~~~
list.c: In function ‘createList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
47262ed
Fri 24 Mar 2023 04:23:02 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
  106 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
93dce4f
Fri 24 Mar 2023 04:23:20 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:107:1: error: expected ‘;’ before ‘}’ token
  107 | }
      | ^
Compilation failed
46746ec
Fri 24 Mar 2023 04:23:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c00c2f0
Fri 24 Mar 2023 11:30:07 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
2da8a1e
Fri 24 Mar 2023 11:36:10 AM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   37 |   local->prev=NULL;
      |        ^~
list.c:38:8: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   38 |   local->next=NULL;
      |        ^~
Compilation failed
b8795b9
Fri 24 Mar 2023 11:38:01 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9c11cb2
Fri 24 Mar 2023 11:38:30 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
7f89cf7
